--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "portfolio",
+  "name": "alex-rise-portfolio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
-  "scripts": {
+   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Katerina1506/Portfolio.git"
   },
-  "author": "",
+  "author": "Ekaterina Vabishchevich",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Katerina1506/Portfolio/issues"
