--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
    "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp build"
   },
   "repository": {
     "type": "git",
@@ -17,16 +17,14 @@
     "url": "https://github.com/Katerina1506/Portfolio/issues"
   },
   "homepage": "https://github.com/Katerina1506/Portfolio#readme",
-  "dependencies": {
-    "gulp-htmlmin": "^5.0.1",
-    "gulp-inject": "^5.0.5",
-    "gulp-sass": "^5.1.0",
-    "sass": "^1.51.0"
-  },
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-imagemin": "^8.0.0",
-    "gulp-minify": "^3.1.0"
+    "gulp-minify": "^3.1.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-inject": "^5.0.5",
+    "gulp-sass": "^5.1.0",
+    "sass": "^1.51.0"
   }
 }
